[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/main_menu.gd" type="Script" id=1]
[ext_resource path="res://tilemap/background.png" type="Texture" id=2]
[ext_resource path="res://hud/dialog.png" type="Texture" id=3]
[ext_resource path="res://hud/default.theme" type="Theme" id=4]
[ext_resource path="res://hud/button_normal.png" type="Texture" id=5]
[ext_resource path="res://hud/button_pressed.png" type="Texture" id=6]
[ext_resource path="res://hud/button_focused.png" type="Texture" id=7]
[ext_resource path="res://fonts/mister_pixel.otf" type="DynamicFontData" id=8]
[ext_resource path="res://music.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[node name="main_menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="." index="0"]

modulate = Color( 0.4, 0.4, 0.4, 1 )
position = Vector2( 340, 190 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 1024 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="gui" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="dialog" type="NinePatchRect" parent="gui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 30.0
margin_right = 490.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Axis Stretch", "Material", "Patch Margin", "Visibility" ]

[node name="title" type="Label" parent="gui/dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_right = 480.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Consciousness Beam"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="play" type="TextureButton" parent="gui" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 110.0
margin_right = 388.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../quit")
focus_neighbour_bottom = NodePath("../help")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Rect", "Theme" ]

[node name="text" type="Label" parent="gui/play" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Play"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="help" type="TextureButton" parent="gui" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 160.0
margin_right = 388.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../play")
focus_neighbour_bottom = NodePath("../credits")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Rect", "Theme" ]

[node name="text" type="Label" parent="gui/help" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Help"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="credits" type="TextureButton" parent="gui" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 210.0
margin_right = 388.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../help")
focus_neighbour_bottom = NodePath("../quit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Theme" ]

[node name="text" type="Label" parent="gui/credits" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Credits"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="quit" type="TextureButton" parent="gui" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 260.0
margin_right = 388.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../credits")
focus_neighbour_bottom = NodePath("../play")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Theme" ]

[node name="text" type="Label" parent="gui/quit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="fg_dialog" type="NinePatchRect" parent="gui" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 30.0
margin_right = 490.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Axis Stretch", "Material", "Patch Margin", "Visibility" ]

[node name="title" type="Label" parent="gui/fg_dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_right = 480.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Consciousness Beam"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="text" type="Label" parent="gui/fg_dialog" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 330.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Consciousness Beam
Oh test
bla bla bla"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="close" type="TextureButton" parent="gui" index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 260.0
margin_right = 388.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Theme" ]

[node name="text" type="Label" parent="gui/close" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Close"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="music" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 9 )
volume_db = -12.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="pressed" from="gui/play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="gui/help" to="." method="_on_help_pressed"]

[connection signal="pressed" from="gui/credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="gui/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="gui/close" to="." method="_on_close_pressed"]


